--- a/credits.html
+++ b/credits.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./wooho.css">
-    <title>Arcaneo | Home</title>
+    <title>Arcaneo | Credits</title>
     <link rel="icon" href="./favicon_io/favicon.ico" type="image/x-icon"> 
 
 </head>
@@ -39,7 +39,7 @@
         <div class="col-2">
           <h3>NEWSLETTER</h3>
           <form>
-            <input style="border: black 2px;"  type="email" placeholder="Your Email Address" required>
+            <input type="email" placeholder="Your Email Address" required>
             <br>
             <button type="submit">SUBSCRIBE NOW</button>
           </form>
