--- a/controllers.html
+++ b/controllers.html
@@ -22,7 +22,116 @@
     <hr color="red", size="4px">
 
     <!-- code under navbar -->
-
+    <div class="controllergrid">
+        <div class="controller1">
+            <div class="card">
+                <img src="./Images/Divaller_pic.png" alt="Avatar" style="width:100%">
+                <div class="container">
+                  <h2><b>Diavaller Project Diva</b></h2>
+                  <button class="addtocartbutton" type="button">Add to Cart</button>
+                </div>
+              </div>
+        </div>
+        <div class="controller2">
+            <div class="card">
+                <img src="./Images/faucetwo.png" alt="Avatar" style="width:100%">
+                <div class="container">
+                  <h2><b>FauceTwo SDVX</b></h2>
+                  <button class="addtocartbutton" type="button">Add to Cart</button>
+                </div>
+              </div>
+        </div>
+        <div class="controller3">
+            <div class="card">
+                <img src="./Images/hitbox.png" alt="Avatar" style="width:100%">
+                <div class="container">
+                  <h2><b>Hitbox Controller</b></h2>
+                  <button class="addtocartbutton" type="button">Add to Cart</button>
+                </div>
+              </div>
+        </div>
+        <div class="controller4">
+            <div class="card">
+                <img src="./Images/nintendoprocontroller.png" alt="Avatar" style="width:100%">
+                <div class="container">
+                  <h2><b>Nintendo Pro Controller</b></h2>
+                  <button class="addtocartbutton" type="button">Add to Cart</button>
+                </div>
+              </div>
+        </div>
+        <div class="controller5">
+            <div class="card">
+                <img src="./Images/obsideoncontroller.png" alt="Avatar" style="width:100%">
+                <div class="container">
+                  <h2><b>Obsidian Controller</b></h2>
+                  <button class="addtocartbutton" type="button">Add to Cart</button>
+                </div>
+              </div>
+        </div>
+        <div class="controller6">
+            <div class="card">
+                <img src="./Images/pheonixwan.png" alt="Avatar" style="width:100%">
+                <div class="container">
+                  <h2><b>PheonixWan IIDX</b></h2>
+                  <button class="addtocartbutton" type="button">Add to Cart</button>
+                </div>
+              </div>
+        </div>
+        <div class="controller7">
+          <div class="card">
+              <img src="./Images/pop-产品图.png" alt="Avatar" style="width:100%">
+              <div class="container">
+                <h2><b>Popoller Pop n' Music </b></h2>
+                <button class="addtocartbutton" type="button">Add to Cart</button>
+              </div>
+            </div>
+      </div>
+      <div class="controller8">
+        <div class="card">
+            <img src="./Images/ps4controller.png" alt="Avatar" style="width:100%">
+            <div class="container">
+              <h2><b>PS4 Controller</b></h2>
+              <button class="addtocartbutton" type="button">Add to Cart</button>
+            </div>
+          </div>
+    </div>
+    <div class="controller9">
+      <div class="card">
+          <img src="./Images/ps5controller.png" alt="Avatar" style="width:100%">
+          <div class="container">
+            <h2><b>PS5 Controller</b></h2>
+            <button class="addtocartbutton" type="button">Add to Cart</button>
+          </div>
+        </div>
+  </div>
+  <div class="controller10">
+    <div class="card">
+        <img src="./Images/razerrainbow.png" alt="Avatar" style="width:100%">
+        <div class="container">
+          <h2><b>Razer Rainbox Hitbox</b></h2>
+          <button class="addtocartbutton" type="button">Add to Cart</button>
+        </div>
+      </div>
+</div>
+<div class="controller11">
+  <div class="card">
+      <img src="./Images/TAIKOLLER-产品图.png" alt="Avatar" style="width:100%">
+      <div class="container">
+        <h2><b>Taikoller Taiko Controller</b></h2>
+        <button class="addtocartbutton" type="button">Add to Cart</button>
+      </div>
+    </div>
+</div>
+<div class="controller12">
+  <div class="card">
+      <img src="./Images/xboxonecontroller.png" alt="Avatar" style="width:100%">
+      <div class="container">
+        <h2><b>Xbox One Controller</b></h2>
+        <button class="addtocartbutton" type="button">Add to Cart</button>
+      </div>
+    </div>
+</div>
+    </div>
 
 
     <!-- end code :3 -->
