--- a/controllers.html
+++ b/controllers.html
@@ -22,6 +22,10 @@
     <hr color="red", size="4px">
 
     <!-- code under navbar -->
+<div class="controllertitle">
+  <h1><b>Controllers</b></h1>
+</div>
+
     <div class="controllergrid">
         <div class="controller1">
             <div class="card">
