--- a/gallery.html
+++ b/gallery.html
@@ -9,15 +9,15 @@
 
 </head>
 <body>
-    <div class="navbar" >
-        <a class="header-h1-link"  href="./index.html" title=""><img  class="header-h1" src="./gaminglogo.png" alt="Gaming Logo"></a>
-        <ul>
-            <li><a href="./controllers.html">Controllers</a></li>
-            <li><a href="./games.html">Games</a></li>
-            <li><a href="./gallery.html">Gallery</a></li>
-            <li><a href="./credits.html">Credits</a></li>
-        </ul>
-    </div>
+  <div class="navbar" >
+    <a class="header-h1-link"  href="./index.html" title=""><img  class="header-h1" src="./gaminglogo.png" alt="Gaming Logo"></a>
+    <ul>
+        <li><a href="./controllers.html">Controllers</a></li>
+        <li><a href="./games.html">Games</a></li>
+        <li><a href="./gallery.html">Gallery</a></li>
+        <li><a href="./Contactus.html">Contact Us</a></li>
+    </ul>
+</div>
 
     <hr color="red", size="4px">
 
