--- a/games.html
+++ b/games.html
@@ -9,21 +9,107 @@
 
 </head>
 <body>
-    <div class="navbar" >
-        <a class="header-h1-link"  href="./index.html" title=""><img  class="header-h1" src="./gaminglogo.png" alt="Gaming Logo"></a>
-        <ul>
-            <li><a href="./controllers.html">Controllers</a></li>
-            <li><a href="./games.html">Games</a></li>
-            <li><a href="./gallery.html">Gallery</a></li>
-            <li><a href="./credits.html">Credits</a></li>
-        </ul>
-    </div>
+  <div class="navbar" >
+    <a class="header-h1-link"  href="./index.html" title=""><img  class="header-h1" src="./gaminglogo.png" alt="Gaming Logo"></a>
+    <ul>
+        <li><a href="./controllers.html">Controllers</a></li>
+        <li><a href="./games.html">Games</a></li>
+        <li><a href="./gallery.html">Gallery</a></li>
+        <li><a href="./Contactus.html">Contact Us</a></li>
+    </ul>
+</div>
 
     <hr color="red", size="4px">
 
     <!-- code under navbar -->
-
-
+<div class="transition">
+    <div class="gametitle">
+      <h1><b>Games</b></h1>
+    </div>
+    
+        <div class="gamegrid">
+            <div class="game1">
+                <div class="card">
+                    <img src="./Images/beatmaniaiidx31.png" alt="Avatar" style="width:100%">
+                    <div class="container">
+                      <h2><b>Beatmania IIDX 31</b></h2>
+                        <h4>Free</h4>
+                      <button class="addtocartbutton" type="button">Download</button>
+                    </div>
+                  </div>
+            </div>
+            <div class="game2">
+                <div class="card">
+                    <img src="./Images/Guilty_Gear_Strive.png" alt="Avatar" style="width:100%">
+                    <div class="container">
+                      <h2><b>Guilty Gear Strive</b></h2>
+                        <h4>$49.99</h4>
+                      <button class="addtocartbutton" type="button">Add to Cart</button>
+                    </div>
+                  </div>
+            </div>
+            <div class="game3">
+                <div class="card">
+                    <img src="./Images/hatsunemiku.png" alt="Avatar" style="width:400px; height: 400px;">
+                    <div class="container">
+                      <h2><b>Hatsune Miku Project Diva Future Tone</b></h2>
+                        <h4>$39.99</h4>
+                      <button class="addtocartbutton" type="button">Add to Cart</button>
+                    </div>
+                  </div>
+            </div>
+            <div class="game4">
+                <div class="card">
+                    <img src="./Images/popnmusic.png" alt="Avatar" style="width:100%">
+                    <div class="container">
+                      <h2><b>Pop n' Music Eclale</b></h2>
+                        <h4>Free</h4>
+                      <button class="addtocartbutton" type="button">Download</button>
+                    </div>
+                  </div>
+            </div>
+            <div class="game5">
+                <div class="card">
+                    <img src="./Images/sdvx.png" alt="Avatar" style="width:100%">
+                    <div class="container">
+                      <h2><b>Sound Voltex Exceed Gear</b></h2>
+                        <h4>Free</h4>
+                      <button class="addtocartbutton" type="button">Download</button>
+                    </div>
+                  </div>
+            </div>
+            <div class="game6">
+                <div class="card">
+                    <img src="./Images/streetfightersix.png" alt="Avatar" style="width:400px; height: 400px;">
+                    <div class="container">
+                      <h2><b>Street Fighter Six</b></h2>
+                        <h4>$59.99</h4>
+                      <button class="addtocartbutton" type="button">Add to Cart</button>
+                    </div>
+                  </div>
+            </div>
+            <div class="game7">
+              <div class="card">
+                  <img src="./Images/taikonotatsujin.png" alt="Avatar" style="width:400px; height: 400px;">
+                  <div class="container">
+                    <h2><b>Taiko no Tatsujin Drum Session</b></h2>
+                      <h4>$49.99</h4>
+                    <button class="addtocartbutton" type="button">Add to Cart</button>
+                  </div>
+                </div>
+          </div>
+          <div class="game8">
+            <div class="card">
+                <img src="./Images/tekken7.png" alt="Avatar" style="width:400px; height: 400px;">
+                <div class="container">
+                  <h2><b>Tekken 7</b></h2>
+                    <h4>$49.99</h4>
+                  <button class="addtocartbutton" type="button">Add to Cart</button>
+                </div>
+              </div>
+        </div>
+        </div>
+      </div>
 
     <!-- end code :3 -->
 
