--- a/Contactus.html
+++ b/Contactus.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./wooho.css">
-    <title>Arcaneo | Home</title>
+    <title>Arcaneo | Credits</title>
     <link rel="icon" href="./favicon_io/favicon.ico" type="image/x-icon"> 
 
 </head>
 <body>
-  <div class="navbar" >
-    <a class="header-h1-link"  href="./index.html" title=""><img  class="header-h1" src="./gaminglogo.png" alt="Gaming Logo"></a>
-    <ul>
-        <li><a href="./controllers.html">Controllers</a></li>
-        <li><a href="./games.html">Games</a></li>
-        <li><a href="./gallery.html">Gallery</a></li>
-        <li><a href="./Contactus.html">Contact Us</a></li>
-    </ul>
-</div>
+    <div class="navbar" >
+        <a class="header-h1-link"  href="./index.html" title=""><img  class="header-h1" src="./gaminglogo.png" alt="Gaming Logo"></a>
+        <ul>
+            <li><a href="./controllers.html">Controllers</a></li>
+            <li><a href="./games.html">Games</a></li>
+            <li><a href="./gallery.html">Gallery</a></li>
+            <li><a href="./Contactus.html">Contact Us</a></li>
+        </ul>
+    </div>
 
     <hr color="red", size="4px">
 
@@ -39,7 +39,7 @@
         <div class="col-2">
           <h3>NEWSLETTER</h3>
           <form>
-            <input style="border: black 2px;"  type="email" placeholder="Your Email Address" required>
+            <input type="email" placeholder="Your Email Address" required>
             <br>
             <button type="submit">SUBSCRIBE NOW</button>
           </form>
