--- a/controllers.html
+++ b/controllers.html
@@ -9,19 +9,20 @@
 
 </head>
 <body>
-    <div class="navbar" >
-        <a class="header-h1-link"  href="./index.html" title=""><img  class="header-h1" src="./gaminglogo.png" alt="Gaming Logo"></a>
-        <ul>
-            <li><a href="./controllers.html">Controllers</a></li>
-            <li><a href="./games.html">Games</a></li>
-            <li><a href="./gallery.html">Gallery</a></li>
-            <li><a href="./credits.html">Credits</a></li>
-        </ul>
-    </div>
+  <div class="navbar" >
+    <a class="header-h1-link"  href="./index.html" title=""><img  class="header-h1" src="./gaminglogo.png" alt="Gaming Logo"></a>
+    <ul>
+        <li><a href="./controllers.html">Controllers</a></li>
+        <li><a href="./games.html">Games</a></li>
+        <li><a href="./gallery.html">Gallery</a></li>
+        <li><a href="./Contactus.html">Contact Us</a></li>
+    </ul>
+</div>
 
     <hr color="red", size="4px">
 
     <!-- code under navbar -->
+<div class="transition">
 <div class="controllertitle">
   <h1><b>Controllers</b></h1>
 </div>
@@ -147,6 +148,7 @@
       </div>
     </div>
 </div>
+    </div>
     </div>
 
 
