--- a/Contactus.html
+++ b/Contactus.html
@@ -23,6 +23,43 @@
 
     <!-- code under navbar -->
 
+      <form class="contactform" >
+        <div class="controllertitle">
+          <h1>Contact Us</h1><br>
+        </div>
+          <p>Required Fields are followed by *</p><br>
+        <div class="fieldset">
+          <fieldset>
+          <h2>Contact Information:</h2><br>
+    <br><label for="name" >Name: *</label><br>
+    <input class="contactustext" type="text" name="name" id="name" placeholder="John Smith"><br>
+    <label for="email" >Email: *</label><br>
+    <input type="mail" name="email" id="email" placeholder="johnsmith@aol.com"><br>
+   
+    <h2>Payment Information:</h2><br>
+    <label for="card">Card Type: *</label><br>
+    <select name="card" id="card"><br>
+    <option value="visa">Visa</option><br>
+    <option value="MasterCard">MasterCard</option><br>
+    <option value="CapitalOne">Capital One</option><br>
+    <option value="Amex">American Express</option><br>
+</select><br>
+    <label for="OrderNumber">Order Number: *</label><br>
+    <input class="contactustext" type="text" name="OrderNumber" id="OrderNumber" placeholder="1234567890"><br>
+
+</div>
+</fieldset>
+</div>
+
+</form>
+
+<div class="buttontestcenter">
+  <a href="./index.html">
+    <button class="buttontest">Submit Form</button>
+  </a>
+</div>
+
+
 
 
     <!-- end code :3 -->
