--- a/gallery.html
+++ b/gallery.html
@@ -23,6 +23,50 @@
 
     <!-- code under navbar -->
 
+  </div>
+    
+  <div class="gallerygrid">
+      <div class="gallery1">
+          <div class="card">
+              <div class="container">
+                <iframe width="720" height="400"
+                src="https://www.youtube.com/embed/IHinl1BH1ao">
+              </iframe>
+              </div>
+            </div>
+      </div>
+      <div class="gallery2">
+          <div class="card">
+              <img src="./Images/iidxarcade.png" alt="Avatar" style="width:100%">
+            </div>
+      </div>
+      <div class="gallery3">
+          <div class="card">
+              <img src="./Images/popnmusicarcade.png" alt="Avatar" style="width:100%">
+            </div>
+      </div>
+      <div class="gallery4">
+          <div class="card">
+              <img src="./Images/sdvxcabinets.png" alt="Avatar" style="width:100%">
+            </div>
+      </div>
+      <div class="gallery5">
+          <div class="card">
+              <img src="./Images/mvc3evo.png" alt="Avatar" style="width:100%">
+            </div>
+      </div>
+      <div class="gallery6">
+          <div class="card">
+              <img src="./Images/tekken7evo.png" alt="Avatar" style="width:100%">
+            </div>
+      </div>
+      <div class="gallery7">
+        <div class="card">
+            <img src="./Images/sf6evo.png" alt="Avatar" style="width:100%">
+          </div>
+    </div>
+  </div>
+</div>
 
 
     <!-- end code :3 -->
