--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./wooho.css">
+    <link rel="stylesheet" href="./font.css">
     <title>Arcaneo | Home</title>
     <link rel="icon" href="./favicon_io/favicon.ico" type="image/x-icon"> 
 
@@ -22,7 +23,71 @@
     <hr color="red", size="4px">
 
     <!-- code under navbar -->
+<div class="body2electricboogaloo">
 
+    <div class="containerStyle">
+      <div class="h1test">
+          <h1>World's Best Arcade<br> Reseller Store</h1>
+      </div>
+      <div class="buttontestcenter">
+        <a href="./Gallery.html">
+          <button class="buttontest">Check it out!</button>
+        </a>
+      </div>
+  </div>
+  
+  <div class="containerStyle2">
+      <div class="h1test2">
+          <h1>Controllers and Arcade Machines<br> At the lowest price!</h1>
+      </div>
+      <div class="h4test2">
+          <h4>
+              We have a bunch on controllers fit for rhythm and<br>
+              fighting games so you can get the best experience!
+              </h4>
+      </div>
+      <div class="buttontestcenter2">
+        <a href="./controllers.html">
+          <button class="buttontest2">Look at our products</button>
+        </a>
+      </div>
+  </div>
+  
+  <div class="smallfooter">
+      <div class="h3testfooter">
+          <h2>Get 5% Off Select Products</h2>
+          <div>
+              <a class="hreftestfooter"  href="./controllers.html">Click here to learn more --></a>
+          </div>
+      </div>
+  </div>
+  
+  <div class="mainjobarea">
+      <div class="mainjobareatitle">
+          <p>Customer Reviews</p>
+      </div>
+  </div>
+  <div class ="arrange">
+    <div class="card">
+      <img src="./Images/690108.png" alt="Avatar" style="width: 310px; height: 310px; padding-left: 45px;" >
+      <div class="container">
+       <p class="joblink">"Help me I am addicted to arcade games <br> I can't stop playing them and <br> this website is feeding into my addiction." <br>-Alan</p> 
+      </div>
+    </div>
+    <div class="card">
+      <img src="./Images/690108.png" alt="Avatar" style="width: 310px; height: 310px; padding-left: 0px" >
+      <div class="container">
+        <p class="joblink">"Honestly who even plays <br> arcade games anymore. I'm all on <br> Baulder's Gate 3."<br> -Someone</p>
+      </div>
+    </div>
+    <div class="card">
+      <img src="./Images/690108.png" alt="Avatar" style="width: 310px; height: 310px;" >
+      <div class="container">
+  <p class="joblink">"These prices may be high <br>but the quality and shipping is <br>amazing! <br> -Balan</p>
+      </div>
+    </div>
+  </div>
+</div>
 
 
     <!-- end code :3 -->
