--- a/Contactus.html
+++ b/Contactus.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./wooho.css">
-    <title>Arcaneo | Credits</title>
+    <title>Arcaneo | Contact Us</title>
     <link rel="icon" href="./favicon_io/favicon.ico" type="image/x-icon"> 
 
 </head>
